# BinaryMeshFitting

./: CMakeLists.txt  README.md
BinaryMeshFitting/: BinaryMeshFitting.cpp  BinaryMeshFitting.h  BinaryMeshFitting.vcxproj  CMakeLists.txt  Camera.h  ChunkBlocks.hpp  ColorMapper.cpp  ColorMapper.hpp  FastNoiseSIMD.h  NoiseSampler.cpp  NoiseSampler.hpp  PCH.h  Renderer.h  Sampler.hpp  Scene.h  WorldOctree.cpp  WorldOctree.hpp  math.hpp  noise.hpp
BinaryMeshFitting/GLFW/: glfw3.h
BinaryMeshFitting/Math/: Matrix.h  Transform.h  Vector.h
BinaryMeshFitting/gl/: glew.c  glew.h
BinaryMeshFitting/glm/: glm.hpp
